docs: standardize Java version to 25 + --enable-preview across workshop
Workshop poms target Java 25 with --enable-preview (Spring Boot 4.0.5;
StructuredTaskScope.open is the JEP 505 preview API). Module docs
previously claimed Java 17 / 21+ and Module 06 Dockerfile used OpenJDK
21, which would fail to run Java 25 code. Align every prerequisite,
troubleshooting note, GitHub Actions YAML, and the Dockerfile to the
real Java 25 baseline. Add --enable-preview to the container ENTRYPOINT
and add a callout to the structured-concurrency chapter explaining the
preview requirement.

Also adds TASKS.md tracking the remaining items from the workshop review.

Closes review item 1.1.